@@ -1,0 +1,5 @@
+lyricue = {
+        'impl' : 'launchpad',
+        'project' : 'lyricue',
+        'bug_pattern_base' : None,
+}
