@@ -2,6 +2,7 @@ lyricue (1:3.3.3-1) maverick; urgency=low
 
   * Fix html output of songlist
   * Allow lyricue to load even if bibleDb goes missing
+  * Add apport bug reporting
 
  -- Chris Debenham <chris@adebenham.com>  Wed, 3 Nov 2011 17:30:00 +1000
 
